Emit ATK events for document load changes

* Implement support for Event::LOAD_COMPLETE, firing AtkDocument load-
  complete and AtkObject state-change events.
* Create Event::LOAD_START, and fire AtkObject state-change events.
* Try to filter out load changes we don't want to fire an event for, e.g.
  pages which lack size. This saves each AT from having to filter these
  (presumed) irrelevant events out.

TBR=slan@chromium.org

Bug: 866331, 866333
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I2f97563b5c2160793a09588481bd2bacf0f0eae1
Reviewed-on: https://chromium-review.googlesource.com/1234228
Commit-Queue: Joanmarie Diggs <joanmarie.diggs@gmail.com>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594385}
Former-commit-id: f3725369fc97658ecce074063ebf0f30e8356003